# kitmatch

./: .gitattributes  .gitignore  README.md
backend/: .gitignore  README.md  api.docx  docker-compose.yml  pyproject.toml  rabbitmq.conf
backend/Dockerfiles/: Dockerfile
backend/kitmatch/: setup.py
backend/kitmatch/src/kitmatch/: config.py  main.py
backend/kitmatch/src/kitmatch/db/: __init__.py  default_fields.py  detection_storage.py  mongo_client.py  second_db.py
backend/kitmatch/src/kitmatch/executors/: __init__.py  base.py  object_finder.py  triton_client.py
backend/kitmatch/src/kitmatch/models/: detection_models.py  model.py
backend/kitmatch/src/kitmatch/queue_utils/: __init__.py  client.py  distributor.py  message.py  request_distributor.py  send.py
backend/kitmatch/src/kitmatch/routes/: api.py  infer.py
backend/kitmatch/src/kitmatch/services/: object_detection_service.py
backend/kitmatch/src/kitmatch/utils/: csv.py  images.py  img_utils.py  logger.py  logging_middleware.py  registry.py  utils.py  visualization.py
backend/static/fonts/: README.md
experiments/: InferenceViT.ipynb  MashupTools.ipynb  README_crops.md  README_dino3train.md  README_training.md  annotate_coco_gdino_sam2.py  annotate_gdino_sam2_dinov3_hf copy.py  annotate_gdino_sam2_dinov3_hf.py  convert_ls_to_yolo.py  debug_recalc_DSCN4946.py  dinov3_hf.ipynb  dinov3_hf_gallery_classify.py  download_yadisk_public.py  download_yadisk_public_parallel.py  infer_sam2_dinov3.py  lct-dino-2.ipynb  lct-dino-2.py  lct-dino-3 copy.py  lct-dino-3-val.py  lct-dino-3.py  make_bbox_crops.py  (+10 more)
(+32 files in other folders)
